--- a/templates/home.html
+++ b/templates/home.html
@@ -51,15 +51,27 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+            {% if msg.id in likes %}
+            <form method="POST" action="/users/un_like/{{ msg.id }}" id="messages-form">
               <button class="
                 btn 
                 btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
+                btn-primary"
               >
                 <i class="fa fa-thumbs-up"></i> 
               </button>
             </form>
+            {% else %}
+            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
+                <button class="
+                  btn 
+                  btn-sm 
+                  btn-secondary"
+                >
+                  <i class="fa fa-thumbs-up"></i> 
+                </button>
+              </form>
+              {% endif %}
           </li>
         {% endfor %}
       </ul>
