--- a/templates/home.html
+++ b/templates/home.html
@@ -51,27 +51,15 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            {% if msg.id in likes %}
-            <form method="POST" action="/users/un_like/{{ msg.id }}" id="messages-form">
+            <form method="POST" action="/users/{{'un_like' if msg.id in likes else 'add_like'}}/{{ msg.id }}" id="messages-form">
               <button class="
                 btn 
                 btn-sm 
-                btn-primary"
+                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
               >
                 <i class="fa fa-thumbs-up"></i> 
               </button>
             </form>
-            {% else %}
-            <form method="POST" action="/users/add_like/{{ msg.id }}" id="messages-form">
-                <button class="
-                  btn 
-                  btn-sm 
-                  btn-secondary"
-                >
-                  <i class="fa fa-thumbs-up"></i> 
-                </button>
-              </form>
-              {% endif %}
           </li>
         {% endfor %}
       </ul>
