--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -17,6 +17,15 @@
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
           </div>
+          <form method="POST" action="/users/un_like/{{ message.id }}" id="messages-form">
+            <button class="
+              btn 
+              btn-sm 
+              btn-primary"
+            >
+              <i class="fa fa-thumbs-up"></i> 
+            </button>
+          </form>
         </li>
 
       {% endfor %}
