--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -17,7 +17,7 @@
             <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
             <p>{{ message.text }}</p>
           </div>
-          <form method="POST" action="/users/un_like/{{ message.id }}" id="messages-form">
+          <form method="POST" action="/users/un_like/{{ message.id }}" id="messages-form" class="unlike">
             <button class="
               btn 
               btn-sm 
