make profile-edit page style tweaks

--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -31,9 +31,9 @@
           <a href="/users/{{ user_id }}" class="btn btn-outline-secondary">Cancel</a>
         </div>
       </form>
-      <div class="container col-6 mt-4">
+      <div class="mt-5 text-center">
         <form method="POST" action="/users/delete">
-            <button class="btn btn-danger">Delete Profile</button>
+            <button class="btn btn-danger px-5">Delete Profile</button>
           </form>
       </div>
     </div>
